add ghuloum to bib

--- a/bib.bib
+++ b/bib.bib
@@ -12,3 +12,9 @@ pages = {1437--1458},
 keywords = {real-time, WCET, compiler, optimization, multi-objective, Pareto optimal},
 year = {2011},
 }
+@inproceedings{Ghuloum:incremental-approach,
+  author = {Abdulaziz Ghuloum}
+  title  = {An Incremental Approach to Compiler Construction},
+  booktitle = {Proceedings of the 2006 Workshop on Scheme and Functional Programming},
+  year = 2006
+} 
